# Spectral_Display_Module_Firmware

./: .gitignore  CMakeLists.txt  CMakePresets.json
scripts/: build.sh
test_app/: CMakeLists.txt
test_app/source/: main.cpp
